operation/ingress/http-rule/isito.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kiali
  namespace: istio-system
  annotations:
    kubernetes.io/ingress.class: mcp-gateway
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/auth-tls-secret: isito/mcp-gateway-certs
    nginx.ingress.kubernetes.io/auth-tls-verify-client: 'on'
    nginx.ingress.kubernetes.io/session-cookie-hash: sha1
    nginx.ingress.kubernetes.io/session-cookie-name: route
#    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
    - secretName: mcp-gateway-certs
  rules:
    - host:
      http:
        paths:
          - backend:
              serviceName: kiali
              servicePort: 20001
            path: /kiali
